Finalized UI - finishing up testing.